// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderList should render list by array 1`] = `
Array [
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        0,
        0,
      ],
    },
    "ref": null,
    "type": "view",
  },
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        1,
        1,
      ],
    },
    "ref": null,
    "type": "view",
  },
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        2,
        2,
      ],
    },
    "ref": null,
    "type": "view",
  },
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        3,
        3,
      ],
    },
    "ref": null,
    "type": "view",
  },
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        4,
        4,
      ],
    },
    "ref": null,
    "type": "view",
  },
]
`;

exports[`renderList should render list by number 1`] = `
Array [
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        1,
        0,
      ],
    },
    "ref": null,
    "type": "view",
  },
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        2,
        1,
      ],
    },
    "ref": null,
    "type": "view",
  },
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        3,
        2,
      ],
    },
    "ref": null,
    "type": "view",
  },
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        4,
        3,
      ],
    },
    "ref": null,
    "type": "view",
  },
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        5,
        4,
      ],
    },
    "ref": null,
    "type": "view",
  },
]
`;

exports[`renderList should render list by object 1`] = `
Array [
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        1,
        "a",
      ],
    },
    "ref": null,
    "type": "view",
  },
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        2,
        "b",
      ],
    },
    "ref": null,
    "type": "view",
  },
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        3,
        "c",
      ],
    },
    "ref": null,
    "type": "view",
  },
]
`;

exports[`renderList should render list by string 1`] = `
Array [
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        "h",
        0,
      ],
    },
    "ref": null,
    "type": "view",
  },
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        "e",
        1,
      ],
    },
    "ref": null,
    "type": "view",
  },
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        "l",
        2,
      ],
    },
    "ref": null,
    "type": "view",
  },
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        "l",
        3,
      ],
    },
    "ref": null,
    "type": "view",
  },
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        "o",
        4,
      ],
    },
    "ref": null,
    "type": "view",
  },
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        " ",
        5,
      ],
    },
    "ref": null,
    "type": "view",
  },
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        "w",
        6,
      ],
    },
    "ref": null,
    "type": "view",
  },
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        "o",
        7,
      ],
    },
    "ref": null,
    "type": "view",
  },
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        "r",
        8,
      ],
    },
    "ref": null,
    "type": "view",
  },
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        "l",
        9,
      ],
    },
    "ref": null,
    "type": "view",
  },
  Object {
    "_owner": null,
    "key": null,
    "props": Object {
      "children": Array [
        "d",
        10,
      ],
    },
    "ref": null,
    "type": "view",
  },
]
`;
